# nina-fw

./: CMakeLists.txt  sdkconfig.old
components/arduino-core-esp32/: CMakeLists.txt  WInterrupts.c  WMath.cpp  delay.c
components/libraries/: CMakeLists.txt
components/libraries/ArduinoBearSSL/src/: SHA1.cpp  SHA1.h
components/libraries/ArduinoECCX08/src/utility/: ECCX08SelfSignedCert.cpp
components/libraries/WiFi/src/: WiFi.cpp  WiFi.h
components/libraries/Wire/src/: Wire.cpp
main/: CMakeLists.txt  CommandHandler.cpp  sketch.ino.cpp
